k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-app-ingress
  namespace: message-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Demo app
          - path: /demo-app
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 3000
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
